<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.BusinessCardDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txv_name_title"
            style="@style/Widget.BusinessCardDetails.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_name_info"
            style="@style/Widget.BusinessCardDetails.TextView.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_name_title"
            tools:text="@string/label_name" />

        <TextView
            android:id="@+id/txv_phone_title"
            style="@style/Widget.BusinessCardDetails.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_name_info" />

        <TextView
            android:id="@+id/txv_phone_info"
            style="@style/Widget.BusinessCardDetails.TextView.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_phone_title"
            tools:text="@string/label_phone" />

        <TextView
            android:id="@+id/txv_email_title"
            style="@style/Widget.BusinessCardDetails.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_phone_info" />

        <TextView
            android:id="@+id/txv_email_info"
            style="@style/Widget.BusinessCardDetails.TextView.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_email_title"
            tools:text="@string/label_email" />

        <TextView
            android:id="@+id/txv_company_title"
            style="@style/Widget.BusinessCardDetails.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_email_info" />

        <TextView
            android:id="@+id/txv_company_info"
            style="@style/Widget.BusinessCardDetails.TextView.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_company_title"
            tools:text="@string/label_company" />

        <TextView
            android:id="@+id/txv_background_color_title"
            style="@style/Widget.BusinessCardDetails.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_background_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_company_info" />

        <TextView
            android:id="@+id/txv_background_color_info"
            style="@style/Widget.BusinessCardDetails.TextView.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_background_color_title"
            tools:text="@string/label_background_color" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/label_card_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_background_color_info" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/label_delete"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_edit"
            app:strokeColor="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    ┼
</androidx.core.widget.NestedScrollView>